# Rust-HTTP-Server

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  prometheus.yml
src/: handlers.rs  main.rs  models.rs  state.rs
src/.cph/: .main.rs_0bead10438c067a7aaae2370fb55e7d1.prob
src/models/: db.rs  users.rs
