[package]
name = "Rust-HTTP-Server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["macros"] }
hyper = { version = "1.6.0", features = ["server"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.46.1", features = ["full"] }
tracing = "0.1"  # Logging
tracing-subscriber = "0.3"  # Logging subscriber
dotenv = "0.15"  # Environment variables
thiserror = "1.0"  # Custom errors
chrono = { version = "0.4.41", features = ["serde"] }
lazy_static = "1.4"
mongodb = "2.8"  # MongoDB driver
uuid = { version = "1.7", features = ["v4", "serde"] }  # For generating unique IDs