[package]
name = "Rust-HTTP-Server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["macros"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.46.1", features = ["full"] }
dotenv = "0.15"  # Environment variables
chrono = { version = "0.4.41", features = ["serde"] }
mongodb = "2.8"  # MongoDB driver